# aav-research-agent

./: .env  .env.txt  README.md  main.py  pyproject.toml  requirements.txt  run_daily.bat
data/processed/digests/: 2026-04-02_digest.txt
data/raw/: gmail_credentials.json  gmail_token.json
src/aav_agent/: api_test.py  main.py
src/aav_agent/llm/: lit_review_summarizer.py  summarizer.py
src/aav_agent/tools/: gmail_ingest.py  gmail_sender.py  openalex_client.py
